<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.9">


            <LinearLayout
                android:id="@+id/LL_up"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:alpha="0.9"
                        android:src="@drawable/downloadfood"/>

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:elevation="1dp"
                        android:layout_gravity="start"
                        android:src="@drawable/backarrow" />

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="70dp"
                        android:elevation="1dp"
                        android:layout_gravity="end"
                        android:src="@drawable/ic_file_upload_black_24dp" />

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="end"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:elevation="1dp"
                        android:src="@drawable/ic_error_outline_black_24dp" />







                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"

                    android:background="@color/white">



                </FrameLayout>



            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/cardborder"
                android:layout_marginStart="14dp"
                android:layout_marginEnd="14dp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="25dp"
                android:elevation="4dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtView_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/Restaurnt"
                    android:layout_gravity="center"
                    android:textSize="20dp"
                    android:fontFamily="monospace"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtView_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/Timings"
                    android:textSize="16dp"
                    android:drawableLeft="@drawable/ic_star_border_black_24dp"
                    android:drawablePadding="2dp"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/txtView_salary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/contact"
                    android:textSize="16dp"
                    android:drawableLeft="@drawable/call"
                    android:drawablePadding="5dp"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:textStyle="normal" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/txtView_age"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/Booking"
                    android:textSize="17dp"
                    android:background="@drawable/rectgreybor"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:textAllCaps="true"
                    android:textStyle="normal"
                    android:paddingStart="25dp"
                    android:paddingEnd="25dp"/>


            </LinearLayout>

            android:layout_centerInParent="true"



        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Starter"
                android:textSize="20dp"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="10dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:layout_gravity="top"/>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/PV_recent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:background="@color/white">

            </androidx.recyclerview.widget.RecyclerView>

        </LinearLayout>

        <!-- <TextView
             android:id="@+id/BTN_Menu"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="10dp"
             android:text="@string/menu"
             android:textSize="17dp"
             android:background="@drawable/menuborder"
             android:drawableLeft="@drawable/came"
             android:layout_gravity="center"
             android:textColor="@color/black"
             android:textAllCaps="true"
             android:textStyle="bold"
             android:padding="20dp"/>-->

        <LinearLayout
            android:id="@+id/LL_Cart"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@color/colorPrimaryDark"
            android:layout_gravity="center_horizontal|center_vertical"
            android:gravity="center"
            android:orientation="horizontal">


            <ImageView
                android:clickable="true"
                android:id="@+id/IMG_cart"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/ic_add_shopping_cart_white_24dp"
                android:focusable="true" />


            <TextView
                android:id="@+id/TV_Cart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Cart"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@color/colorPrimaryDark"
                android:textColor="@color/white"
                android:textAllCaps="true"
                android:textSize="20dp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/TV_CItems"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/itemsc"
                android:background="@color/colorPrimaryDark"
                android:textColor="@color/white"
                android:textAllCaps="true"
                android:textSize="20dp"
                android:textStyle="bold"/>



        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

