<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="2dp"
    android:paddingBottom="2dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp">

    <RelativeLayout
        android:id="@+id/RL_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:padding="6dp" >


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="2dp"
            android:layout_toStartOf="@+id/LL_cart_plus_minus_layout"
            android:orientation="vertical">

            <TextView
                android:id="@+id/TV_Hname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Restaurnt"
                android:textColor="@color/black"
                android:textSize="24dp" />

            <TextView
                android:id="@+id/TV_Hcontent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Booking"
                android:textColor="@color/black"

                android:textSize="18dp" />

            <TextView
                android:id="@+id/TV_Amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amount"
                android:textColor="@color/bootstrap_brand_danger"
                android:textSize="18dp" />


        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/BTN_Add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rectgreybor"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/Add"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="16dp"
        android:textStyle="normal"
        android:visibility="gone"/>


        <ImageView
            android:id="@+id/IMG_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/LL_cart_plus_minus_layout"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/ic_forum_black_24dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/LL_cart_plus_minus_layout"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/countborder"
            android:orientation="horizontal"
            android:visibility="visible">


            <ImageView
                android:clickable="true"
                android:id="@+id/IV_cart_minus_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:src="@drawable/ic_remove_black_24dp"
                android:layout_gravity="center|start"
                android:focusable="true" />

            <TextView
                android:id="@+id/TV_cart_product_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="10"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold" />

            <ImageView
                android:clickable="true"
                android:id="@+id/IV_cart_plus_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_gravity="end|center"
                android:src="@drawable/ic_add_black_24dp"
                android:focusable="true" />


        </LinearLayout>

        <ImageView
            android:id="@+id/IV_msg"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_below="@+id/LL_cart_plus_minus_layout"
            android:layout_alignParentEnd="true"
            android:layout_gravity="end"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="16dp"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_forum_black_24dp" />

        <View
            android:id="@+id/V_Line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/graylay"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="0dp"
            />

    </RelativeLayout>

</LinearLayout>