<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Screens.CartActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/colorPrimaryDark"
            android:layout_weight="0.6">

            <ImageView
                android:id="@+id/IV_back"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:elevation="1dp"
                android:layout_gravity="start"
                android:src="@drawable/backarrow" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_toEndOf="@+id/IV_back"
                android:gravity="center"
                android:text="@string/cart"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="25dp"
                android:textStyle="bold" />



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/cardborder"
                    android:layout_marginStart="50dp"
                    android:layout_marginEnd="50dp"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="40dp"
                    android:orientation="vertical">



                    <TextView
                        android:id="@+id/txtView_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:text="@string/Total"
                        android:textSize="16dp"
                        android:layout_gravity="center"
                        android:textColor="@color/bootstrap_brand_danger"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                       android:layout_margin="16dp"
                        android:text="@string/amount"
                        android:layout_gravity="center"
                        android:textSize="20dp"
                        android:fontFamily="monospace"
                        android:textColor="@color/colorPrimaryDark"
                        android:textStyle="bold" />


                </LinearLayout>

            android:layout_centerInParent="true"



        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Review Orders"
                android:textSize="20dp"
              android:layout_margin="10dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:layout_gravity="top"/>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/cart_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="2dp"
                android:background="@color/white">

            </androidx.recyclerview.widget.RecyclerView>

            <TextView
                android:id="@+id/TV_show"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Show more"
                android:gravity="right|end"
                android:textSize="20dp"
                android:layout_margin="8dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:layout_gravity="end"
                android:visibility="visible"/>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/LL_Cart"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@color/colorPrimaryDark"
            android:layout_gravity="center_horizontal|center_vertical"
            android:gravity="center"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/TV_Cart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Order"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@color/colorPrimaryDark"
                android:textColor="@color/white"
                android:textAllCaps="true"
                android:textSize="20dp"
                android:textStyle="bold"/>

        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>